--- a/notebook_week3.ipynb
+++ b/notebook_week3.ipynb
@@ -644,7 +644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conlusion\n",
+    "## Conclusion\n",
     "1. The age, height, weight, and gender of athletes play a crucial role in predicting medal-winning performances.\n",
     "2. Age, height, and weight exhibit a positive correlation with medal-winning outcomes, which is understandable given that advancing age often accompanies increased strength, skills, and experience. Similarly, height and weight positively impact attributes such as strength, speed, and other physiological responses.\n",
     "3. Interestingly, gender displays an inverse relationship with medal-winning success. This finding corroborates our previous analysis, which suggested that female athletes appear to have a higher likelihood of achieving medal-worthy performances compared to their male counterparts."
